--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <a href="https://dmitriyvik.github.io/batman/">batman</a>
+    <a href="https://dmitriyvik.github.io/Delivery/">Delivery</a>
+    <!-- <a href="https://dmitriyvik.github.io/BurgerQuiz/">BurgerQuiz</a> -->
+    <a href="https://dmitriyvik.github.io/Distance/">Distance</a>
+    <link rel="stylesheet" href="css/style.css" />
+  </body>
 </html>
