--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <a href="https://dmitriyvik.github.io/batman/">batman</a>
     <a href="https://dmitriyvik.github.io/Delivery/">Delivery</a>
     <!-- <a href="https://dmitriyvik.github.io/BurgerQuiz/">BurgerQuiz</a> -->
     <a href="https://dmitriyvik.github.io/Distance/">Distance</a>
-    <link rel="stylesheet" href="css/style.css" />
+    <a href="https://dmitriyvik.github.io/StarWars/">StarWars</a>
   </body>
 </html>
