--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <a href="https://dmitriyvik.github.io/batman/">batman</a>
     <a href="https://dmitriyvik.github.io/Delivery/">Delivery</a>
-    <!-- <a href="https://dmitriyvik.github.io/BurgerQuiz/">BurgerQuiz</a> -->
     <a href="https://dmitriyvik.github.io/Distance/">Distance</a>
+    <a href="https://dmitriyvik.github.io/NetClicks/.">NetClicks</a>
+    <a href="https://dmitriyvik.github.io/batman/">batman</a>
     <a href="https://dmitriyvik.github.io/StarWars/">StarWars</a>
+    <!-- <a href="https://dmitriyvik.github.io/BurgerQuiz/">BurgerQuiz</a> -->
   </body>
 </html>
